--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@ th {
 	
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof">Kernestof</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#clean">Gode vaner</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#undervisningsmateriale">Undervisningsmateriale</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof">Kernestof</a>	
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob">Forløb</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="index2G.html" style="background:lightblue">Gå til 2G 2019/2020</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href=""><script>dato();</script></a>
@@ -126,6 +127,22 @@ th {
 			<li>God navngivning</li>
 			<li>DRY: Dont repeat yourself</li>
 			<li>KISS: Keep it simple stupid</li>
+	    	</ul>
+	    	
+	    	</p>
+    </div>
+  </div>
+
+<!-- Undervisningsmateriale .................-->	
+	<div class="w3-row w3-padding-64" id="undervisningsmateriale">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal"Undervisningsmateriale"</h1>
+	    	<p>
+			Vi bruger ikke nogen lærebog i 2G kun online-materiale (måske ændrer det sig).</b>
+			Nedenfor ses en oversigt over vores undervisningsmateriale:
+		
+		<ul>
+			<li><a href="http://learningprocessing.com/videos/">Bogen "Learning Processing" som videoer</a></li>
 	    	</ul>
 	    	
 	    	</p>
