--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ th {
 	    
 <!-- DETTE ER 3G INHOLD ............................................................................................................................... -->
 	
+<!-- Gode vaner .................-->
 	<div class="w3-row w3-padding-64" id="clean">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Gode vaner</h1>
@@ -136,7 +137,7 @@ th {
 <!-- Undervisningsmateriale .................-->	
 	<div class="w3-row w3-padding-64" id="undervisningsmateriale">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal"Undervisningsmateriale"</h1>
+      <h1 class="w3-text-teal">Undervisningsmateriale</h1>
 	    	<p>
 			Vi bruger ikke nogen lærebog i 2G kun online-materiale (måske ændrer det sig).</b>
 			Nedenfor ses en oversigt over vores undervisningsmateriale:
