--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ th {
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Undervisningsmateriale</h1>
 	    	<p>
-			Vi bruger ikke nogen lærebog i 2G kun online-materiale (måske ændrer det sig).</b>
+			Vi bruger ikke nogen lærebog kun online-materiale (måske ændrer det sig).</b>
 			Nedenfor ses en oversigt over vores undervisningsmateriale:
 		
 		<ul>
