--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ th {
 		Et program der fungerer, kan sagtens bestå af "grim" ulæselig kode.</br>
 		Ulæselig og grim kode er farlig kode! Det er svært at lave ændringer og nemt at lav fejl.</br>
 		Den optimale kode er "Clean Code"; kode der er så enkel og letforståelig, at man ikke behøver nogen forklaring.
-		Vi arbejder tre følgende gode vaner, der automatisk gør koden mere "clean":
+		Vi arbejder med følgende tre gode vaner, der automatisk gør koden mere "clean":
 		
 		<ul>
 			<li>God navngivning</li>
