--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ th {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#clean">Gode vaner</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#vaerktoj">Værktøjer & Sprog</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#undervisningsmateriale">Undervisningsmateriale</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof">Kernestof</a>	
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob">Forløb</a>
@@ -128,6 +129,24 @@ th {
 			<li>God navngivning</li>
 			<li>DRY: Dont repeat yourself</li>
 			<li>KISS: Keep it simple stupid</li>
+	    	</ul>
+	    	
+	    	</p>
+    </div>
+  </div>
+
+<!-- Værktøj & Sprog .................-->
+	<div class="w3-row w3-padding-64" id="vaerktoj">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Værktøjer & Sprog</h1>
+	    	<p>
+		Nedenfor ses en liste over links til værktøjer vi bruger i faget:
+		
+		<ul>
+			<li><a href="https://processing.org/download/">Download Processing</a></li>
+			<li><a href="https://github.com/">SignUp GitHub</a></li>
+			<li><a href="https://desktop.github.com/">Download GitHub Desktop</a></li>
+			<li><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></li>
 	    	</ul>
 	    	
 	    	</p>
