--- a/index.html
+++ b/index.html
@@ -251,8 +251,18 @@ th {
 						<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
 					</td>
 					<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
-					<td> To tilfældige præsenterer </td>
+					<td></td>
 					</tr>
+
+					<tr>
+					<td>Torsdag d.13/8</td>
+					<td></td>
+					<td>	
+					</td>
+					<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
+					<td>Mindst to tilfældige præsenterer ved tavlen!</td>
+					</tr>
+	
 						
 					</table>
 
