--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ th {
 					<table >
 					<tr>
 					<th>Dato</th>
-					<th style="width: 300px">Video</th>
+					<th>Video</th>
 					<th style="width: 300px">Materiale</th>
 					<th style="width: 300px">Formål</th>
 					<th style="width: 300px">Evaluering</th>
@@ -269,7 +269,11 @@ th {
 				<h5 class="w3-text-teal">Nye Posters (denne gang kommer de op)</h5>
 					<table >
 					<tr>
-					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
+					<th>Dato</th>
+					<th>Video</th>
+					<th style="width: 300px">Materiale</th>
+					<th style="width: 300px">Formål</th>
+					<th style="width: 300px">Evaluering</th>
 					</tr>
 
 					<tr>
@@ -283,7 +287,11 @@ th {
 				<h5 class="w3-text-teal">Data visualisering af csv-fil & GUI bibliotek</h5>
 					<table >
 					<tr>
-					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
+					<th>Dato</th>
+					<th>Video</th>
+					<th style="width: 300px">Materiale</th>
+					<th style="width: 300px">Formål</th>
+					<th style="width: 300px">Evaluering</th>
 					</tr>
 
 					<tr>
