--- a/index.html
+++ b/index.html
@@ -142,12 +142,23 @@ th {
 	    	<p>
 		Nedenfor ses en liste over links til værktøjer vi bruger i faget:
 		
-		<ul>
-			<li><a href="https://processing.org/download/">Download Processing</a></li>
-			<li><a href="https://github.com/">SignUp GitHub</a></li>
-			<li><a href="https://desktop.github.com/">Download GitHub Desktop</a></li>
+		<table>
+			<tr>
+				<th>Download link</th>
+				<th>Vejledninger</th>
+				
+			</tr>
+			<tr>
+				<td><a href="https://processing.org/download/">Download Processing</a></td>
+			</tr>
+			<tr>
+				<td><a href="https://github.com/">SignUp GitHub</a></td>
+			</tr>
+			<tr>
+	    			<a href="https://desktop.github.com/">Download GitHub Desktop</a>
+	    		</tr>
 			<li><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></li>
-	    	</ul>
+	    	</table>
 	    	
 	    	</p>
     </div>
