--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ th {
 			<ul>
 			
 			<li>
-			<u>Objektorient programmering:</u></br>
+			Objektorient programmering:</br>
 			<i>Vi kommer til at bruge meget tid på OOP. Her følger de vigtigste underemner:</i></li>
 		      	
 			<ul>
@@ -208,18 +208,18 @@ th {
 				<li>Polymorfi</li>
     			</ul>
 		  	
-			<li><u>Interaktion imellem systemer:</u></br>
+			<li>Interaktion imellem systemer:</br>
 			<i>Databasers og database interaktion.</i></li>
 			
-			<li><u>Biblioteker og generiske dele:</u></br> 
+			<li>Biblioteker og generiske dele:</br> 
 			<i>Dette emne dækkes af vores GUI-bibliotek.</i></li>
 
-			<li><u>Abstrakt dokumentation:</u></br>
+			<li>Abstrakt dokumentation:</br>
 			<i>Rapporter og diverse diagrammer til illustration af programmer.</i></li>
 
-			<li><u>Algoritmer:</u></li>
+			<li>Algoritmer:</li>
 
-			<li><u>Rekursion:</u></li>
+			<li>Rekursion:</li>
 
 			</ul>
 
