--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@ th {
 				<td><a href="https://github.com/">SignUp GitHub</a></td>
 			</tr>
 			<tr>
-	    			<a href="https://desktop.github.com/">Download GitHub Desktop</a>
+				<td><a href="https://desktop.github.com/">Download GitHub Desktop</a></td>
 	    		</tr>
-			<li><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></li>
+				<td><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></td>
+			</tr>
 	    	</table>
 	    	
 	    	</p>
