--- a/index.html
+++ b/index.html
@@ -146,18 +146,30 @@ th {
 			<tr>
 				<th>Download link</th>
 				<th>Vejledninger</th>
+				<th>Beskrivelse</th>
 				
 			</tr>
 			<tr>
 				<td><a href="https://processing.org/download/">Download Processing</a></td>
+				<td></td>
+				<td>Dette er "Processing Sketchbook", som er et helt udviklingsmiljø hvor man kan kode i Processing,- en slags forenklet overbygning til Java sproget </td> 
 			</tr>
 			<tr>
 				<td><a href="https://github.com/">SignUp GitHub</a></td>
+				<td></td>
+				<td>GitHub er en hosting platform på nettet, hvor man gratis kan opbevare sin kode i versions styringssystemet git. 
+				Det er essentielt at man som programmør gemmer sin kode et sikkert sted, og dette er et meget populært valg.</td>
 			</tr>
 			<tr>
 				<td><a href="https://desktop.github.com/">Download GitHub Desktop</a></td>
+				<td></td>
+				<td>"GitHub Desktop" er et program der muliggør kommunikation imellem GitHub og ens egen computer</td>
 	    		</tr>
 				<td><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></td>
+				<td></td>
+				<td>I 3G vil vi et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
+	    			Vi anvender stadig Processing, men nu som et "bibliotek" som vi downloader til vores projekt via maven.</br>
+				Vigtigt: Processing version .3.3.6 fungerer kun med Java version 11.0.5</td>
 			</tr>
 	    	</table>
 	    	
