--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Allerta Stencil", sans-serif;}
   height: inherit;
 }
 table,td {
-  border-spacing: 8px;
+  border-spacing: 2px;
   vertical-align: top;
   text-align: left;
+  border: 1px solid #dddddd;
 }
 table {
   border: 1px solid #dddddd;
