--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ th {
 				<td></td>
 				<td>I 3G vil vi et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
 	    			Vi anvender stadig Processing, men nu som et "bibliotek" som vi downloader til vores projekt via maven.</br>
-				Vigtigt: Processing version .3.3.6 fungerer kun med Java version 11.0.5</td>
+				Vigtigt: Processing version .3.3.6 fungerer kun med Java version 11.0.5 (eller ældre)</td>
 			</tr>
 	    	</table>
 	    	
