--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@ th {
 				<td>"GitHub Desktop" er et program der muliggør kommunikation imellem GitHub og ens egen computer</td>
 	    		</tr>
 				<td><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></td>
-				<td></td>
+				<td><a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></td>
 				<td>I 3G vil vi et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
 	    			Vi anvender stadig Processing, men nu som et "bibliotek" som vi downloader til vores projekt via maven.</br>
-				Vigtigt: Processing version .3.3.6 fungerer kun med Java version 11.0.5 (eller ældre)</td>
+				- </br>
+				Vigtigt: Processing version 3 fungerer kun tilsyneladende kun med Java build 8u202</td>
 			</tr>
 	    	</table>
 	    	
