--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ th {
 				
 			</tr>
 			<tr>
-				<td><a href="https://processing.org/download/">Download Processing</a></td>
+				<td><a href="https://processing.org/download/">Processing</a></td>
 				<td></td>
 				<td>Dette er "Processing Sketchbook", som er et helt udviklingsmiljø hvor man kan kode i Processing,- en slags forenklet overbygning til Java sproget </td> 
 			</tr>
@@ -162,14 +162,14 @@ th {
 				Det er essentielt at man som programmør gemmer sin kode et sikkert sted, og dette er et meget populært valg.</td>
 			</tr>
 			<tr>
-				<td><a href="https://desktop.github.com/">Download GitHub Desktop</a></td>
+				<td><a href="https://desktop.github.com/">GitHub Desktop</a></td>
 				<td></td>
 				<td>"GitHub Desktop" er et program der muliggør kommunikation imellem GitHub og ens egen computer</td>
 	    		</tr>
-				<td><a href="https://www.jetbrains.com/idea/download/">Download IntelliJ Community IDEA</a></td>
+				<td><a href="https://www.jetbrains.com/idea/download/">IntelliJ IDEA</a></td>
 				<td><a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></td>
 				<td>I 3G vil vi et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
-	    			Vi anvender stadig Processing, men nu som et "bibliotek" som vi downloader til vores projekt via maven.</br>
+	    			Vi anvender "intelliJ Community" med Processing som et "bibliotek" som vi henter via maven.</br>
 				- </br>
 				Vigtigt: Processing version 3 fungerer kun tilsyneladende kun med Java build 8u202</td>
 			</tr>
