--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ th {
 		
 		<table>
 			<tr>
-				<th>Download link</th>
+				<th  style="width: 150px">Download link</th>
 				<th>Vejledninger</th>
 				<th>Beskrivelse</th>
 				
@@ -153,22 +153,21 @@ th {
 			<tr>
 				<td><a href="https://processing.org/download/">Processing</a></td>
 				<td></td>
-				<td>Dette er "Processing Sketchbook", som er et helt udviklingsmiljø hvor man kan kode i Processing,- en slags forenklet overbygning til Java sproget </td> 
+				<td>"Processing Sketchbook",- et helt udviklingsmiljø hvor man kan kode i Processing,- et slags forenklet Java sprog </td> 
 			</tr>
 			<tr>
 				<td><a href="https://github.com/">SignUp GitHub</a></td>
 				<td></td>
-				<td>GitHub er en hosting platform på nettet, hvor man gratis kan opbevare sin kode i versions styringssystemet git. 
-				Det er essentielt at man som programmør gemmer sin kode et sikkert sted, og dette er et meget populært valg.</td>
+				<td>GitHub platform til versions styring af kode. Dette er et gratis og populært valg.</td>
 			</tr>
 			<tr>
 				<td><a href="https://desktop.github.com/">GitHub Desktop</a></td>
 				<td></td>
-				<td>"GitHub Desktop" er et program der muliggør kommunikation imellem GitHub og ens egen computer</td>
+				<td>"GitHub Desktop" er et program til kommunikation med GitHub</td>
 	    		</tr>
 				<td><a href="https://www.jetbrains.com/idea/download/">IntelliJ IDEA</a></td>
 				<td><a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></td>
-				<td>I 3G vil vi et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
+				<td>I 3G vil vi anvende et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
 	    			Vi anvender "intelliJ Community" med Processing som et "bibliotek" som vi henter via maven.</br>
 				- </br>
 				Vigtigt: Processing version 3 fungerer kun tilsyneladende kun med Java build 8u202</td>
