--- a/index.html
+++ b/index.html
@@ -153,22 +153,23 @@ th {
 			<tr>
 				<td><a href="https://processing.org/download/">Processing</a></td>
 				<td></td>
-				<td>"Processing Sketchbook",- et helt udviklingsmiljø hvor man kan kode i Processing,- et slags forenklet Java sprog </td> 
+				<td>Udviklingsmiljø til sproget Processing,- en forenkling af Java. </td> 
 			</tr>
 			<tr>
 				<td><a href="https://github.com/">SignUp GitHub</a></td>
 				<td></td>
-				<td>GitHub platform til versions styring af kode. Dette er et gratis og populært valg.</td>
+				<td>Online platform til versions styring af kode. Et gratis og populært valg.</td>
 			</tr>
 			<tr>
 				<td><a href="https://desktop.github.com/">GitHub Desktop</a></td>
 				<td></td>
-				<td>"GitHub Desktop" er et program til kommunikation med GitHub</td>
+				<td>Program til kommunikation med GitHub</td>
 	    		</tr>
 				<td><a href="https://www.jetbrains.com/idea/download/">IntelliJ IDEA</a></td>
 				<td><a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></td>
-				<td>I 3G vil vi anvende et Professionelt udviklingmiljø kaldet "IntelliJ". </br>
+				<td>
 	    			Vi anvender "intelliJ Community" med Processing som et "bibliotek" som vi henter via maven.</br>
+	    			Primært til 3G. </br>
 				- </br>
 				Vigtigt: Processing version 3 fungerer kun tilsyneladende kun med Java build 8u202</td>
 			</tr>
