--- a/index.html
+++ b/index.html
@@ -313,9 +313,11 @@ th {
 					<tr>
 					<td>Mandag d.17/8 - Modul 1</td>
 					<td></td>
-					<td></td>
-					<td>Træning Opgaver (1 lektion)</td>
-					<td>Aflever GitHub Link: En teksfil til hver løsning, navnet på teskfilen skal være den samme som opgaven</td>
+					<td><a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
+					<td>	Træning Opgaver (1 lektion)</br>
+						Mindst 4 opgaver</td>
+					<td>	Aflever GitHub repo-link:</br> 
+						En teksfil pr. løsning, samme navn som opgaven</td>
 					</tr>
 						
 						
