--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@ th {
     		<div class="w3-twothird w3-container">
       			<h1 class="w3-text-teal">Forløb i 3G</13>
 
+<!-- REP. AF ÅRSPRØVEN - FORLØBET ................................................-->
+
 			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,16,8,2020)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
@@ -316,7 +318,7 @@ th {
 					<td><a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
 					<td>	Træning Opgaver (1 lektion)</br>
 						Mindst 4 opgaver</td>
-					<td>	Aflever GitHub repo-link:</br> 
+					<td>	Aflever repo-link (gitHub):</br> 
 						En teksfil pr. løsning, samme navn som opgaven</td>
 					</tr>
 						
@@ -325,8 +327,11 @@ th {
 					<td>Mandag d.17/8 - Modul 2</td>
 					<td></td>
 					<td><a href=""></a></td>
-					<td>Projekt (ca. 3 lektioner)</td>
-					<td>Aflevere dokument, hvor i har skrevet hvordan hver opgave er løst og testet + Koden</td>
+					<td>	Projekt (ca. 3 lektioner)</td>
+					<td>	Aflevere Dokument + Hele Koden: </br>
+						Dokumentet skal indeholde: </br>
+						1.) Løsning til opgaver løst </br>
+						2.) Test af hver opgave</td>
 					</tr>
 
 				
