--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ th {
 					<td>	Projekt (ca. 3 lektioner)</td>
 					<td>	Aflevere Dokument + Hele Koden: </br>
 						Dokumentet skal indeholde: </br>
-						1.) Løsning til opgaver løst </br>
+						1.) Løsning af hver opgave</br>
 						2.) Test af hver opgave</td>
 					</tr>
 
