--- a/index.html
+++ b/index.html
@@ -326,7 +326,10 @@ th {
 					<tr>
 					<td>Mandag d.17/8 - Modul 2</td>
 					<td></td>
-					<td><a href="3G/Forlob_MangeTingDerFlyver/MangeTingDerFlyver.zip">IntelliJ projekt: MangeTingDerFlyver.zip</a></td>
+					<td>
+						<a href="3G/Forlob_MangeTingDerFlyver/Main.java">Main.java</a></br>
+						<a href="3G/Forlob_MangeTingDerFlyver/Ting.java">Ting.java</a></br>
+						<a href="3G/Forlob_MangeTingDerFlyver/pom.xml">pom.xml</a></td>
 					<td>	Projekt (ca. 3 lektioner)</td>
 					<td>	Aflevere Dokument + Hele Koden: </br>
 						Dokumentet skal indeholde: </br>
