--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ th {
 			
 <!-- MANGE TING DER KAN FLYVE - FORLØBET ................................................-->			
 
-			<h5 class="w3-text-teal"><script>forlob("Mange Ting der Flyver - ",16,8,21,8,2020)</script></h5>
+			<h5 class="w3-text-teal"><script>forlob("Mange Ting der Flyver - ",16,8,25,8,2020)</script></h5>
 				Opgaven er at få nogle "ting" til at bevæge sig rundt på skærmen. Når musen rør dem skal de ændre farve.</br>
 				I får udleveret noget kode der i skal færdigskrive.</br>
 				Lidt mere repetition i : Objekter, for-loops og lister</br>
@@ -318,7 +318,7 @@ th {
 					<td><a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
 					<td>	Træning Opgaver (1 lektion)</br>
 						Mindst 4 opgaver</td>
-					<td>	Aflever repo-link (gitHub):</br> 
+					<td>	Aflever repo-link (gitHub): D.25/8</br> 
 						En teksfil pr. løsning, samme navn som opgaven</td>
 					</tr>
 						
@@ -332,7 +332,7 @@ th {
 						<a href="3G/Forlob_MangeTingDerFlyver/Ting.java">Ting.java</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/pom.xml">pom.xml</a></td>
 					<td>	Projekt (ca. 3 lektioner)</td>
-					<td>	Aflevere Dokument + Hele Koden: </br>
+					<td>	Aflevere Dokument + Hele Koden: D.25/8 </br>
 						Dokumentet skal indeholde: </br>
 						1.) Løsning af hver opgave</br>
 						2.) Test af hver opgave</td>
