--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@ th {
 					<td>	Projekt (ca. 3 lektioner)</td>
 					<td>	Aflevere Dokument + Hele Koden: D.25/8 </br>
 						Dokumentet skal indeholde: </br>
-						1.) Løsning af hver opgave</br>
-						2.) Test af hver opgave</td>
+						1.) Forklaring til løsning af hver opgave</br>
+						2.) Forklaring til test af hver opgave</td>
 					</tr>
 
 				
