--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@ th {
 
 					<tr>
 					<td>Mandag d.17/8 - Modul 1</td>
-					<td><a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
+					<td>	
+						<a href="https://youtu.be/8y9UFwNS9Q4">Youtube video om trænings-opgaven!!</a></br>
+						<a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
 					<td>	Træning Opgaver (1 lektion)</br>
 						Mindst 4 opgaver</td>
 					<td>	Aflever repo-link (gitHub): D.25/8</br> 
@@ -321,7 +323,7 @@ th {
 					<tr>
 					<td>Mandag d.17/8 - Modul 2</td>
 					<td>
-						<a href="https://youtu.be/kAr7vVi_99Q">Youtube video om opgaven!!</a></br>
+						<a href="https://youtu.be/kAr7vVi_99Q">Youtube video om projekt-opgaven!!</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/Main.java">Main.java</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/Ting.java">Ting.java</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/pom.xml">pom.xml</a></td>
