--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@ th {
 					<td>Mandag d.17/8 - Modul 1</td>
 					<td>	
 						<a href="https://youtu.be/8y9UFwNS9Q4">Youtube video om trænings-opgaven!!</a></br>
-						<a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></td>
-					<td>	Træning Opgaver (1 lektion)</br>
-						Mindst 4 opgaver</td>
+						<a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></br>
+						<a href="https://codingbat.com/java/Array-2">https://codingbat.com/java/Array-2</a></td>
+					<td>	Mindst 4 opgaver i Array-1</br>
+						Mindst 4 opgaver i Array-2</td>
 					<td>	Aflever repo-link (gitHub): D.25/8</br> 
 						En teksfil pr. løsning, samme navn som opgaven</td>
 					</tr>
