--- a/index.html
+++ b/index.html
@@ -314,9 +314,10 @@ th {
 						<a href="https://youtu.be/8y9UFwNS9Q4">Youtube video om trænings-opgaven!!</a></br>
 						<a href="https://codingbat.com/java/Array-1">https://codingbat.com/java/Array-1</a></br>
 						<a href="https://codingbat.com/java/Array-2">https://codingbat.com/java/Array-2</a></td>
-					<td>	Mindst 4 opgaver i Array-1</br>
-						Mindst 4 opgaver i Array-2</td>
+					<td>	Træn Arrays og Loops</td>
 					<td>	Aflever repo-link (gitHub): D.25/8</br> 
+						Mindst 4 opgaver i Array-1</br>
+						Mindst 4 opgaver i Array-2</br>
 						En teksfil pr. løsning, samme navn som opgaven</td>
 					</tr>
 						
@@ -328,7 +329,7 @@ th {
 						<a href="3G/Forlob_MangeTingDerFlyver/Main.java">Main.java</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/Ting.java">Ting.java</a></br>
 						<a href="3G/Forlob_MangeTingDerFlyver/pom.xml">pom.xml</a></td>
-					<td>	Projekt (ca. 3 lektioner)</td>
+					<td>	Kombination af objekter, arrays og loops</td>
 					<td>	Aflevere Dokument + Hele Koden: D.25/8 </br>
 						Dokumentet skal indeholde: </br>
 						1.) Forklaring til løsning af hver opgave</br>
