--- a/index.html
+++ b/index.html
@@ -143,7 +143,22 @@ th {
 	    	<p>
 		Nedenfor ses en liste over links til værktøjer vi bruger i faget:
 		
-		<table>
+			
+		<h5 class="w3-text-teal">Processing</h5>	
+	    	Udviklingsmiljø til sproget Processing,- en forenkling af Java.</br>
+		<a href="https://processing.org/download/">Download Processing her</a></br>
+	    
+
+		<h5 class="w3-text-teal">GitHub</h5>	
+	    	Online platform til versions styring af kode. Et gratis og populært valg.</br>
+		Virker ved, at du har et såkaldt git-repository til et kode-projekt på din computer og en kopi på github.</br>
+		<a href="https://github.com/">SignUp på GitHub her</a></br>
+
+		<h5 class="w3-text-teal">GitHub Desktop</h5>	
+	    	Program til kommunikation med GitHub.</br>
+		<a href="https://desktop.github.com/">Download Github Desktop her</a></br>
+
+	    	<table>
 			<tr>
 				<th  style="width: 150px">Download link</th>
 				<th>Vejledninger</th>
