--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ th {
 		Vigtigt: Kun kompatibel med Java version 8 build 202:
 		<a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></br>
 		
-		<a href="https://desktop.github.com/">Download Github Desktop her</a></br>
+		<a href="https://desktop.github.com/">Download IntelliJ her</a></br>
 	    	
 	    	</p>
     </div>
