--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ table {
 th {
   background-color: #dddddd;
 }
+a {
+  background-color: ##f3f4fb;
+}
 </style>
 <body>
 
@@ -146,17 +149,20 @@ th {
 			
 		<h5 class="w3-text-teal">Processing</h5>	
 	    	Udviklingsmiljø til sproget Processing,- en forenkling af Java.</br></br>
-		<a href="https://processing.org/download/">Download Processing her</a></br>
+		
+			<a href="https://processing.org/download/">Download Processing her</a></br>
 	    
 
 		<h5 class="w3-text-teal">GitHub</h5>	
-	    	Online platform til versions styring af kode. Et gratis og populært valg.</br></br>
-		Virker ved, at du har et såkaldt git-repository til et kode-projekt på din computer og en kopi på github.</br>
-		<a href="https://github.com/">SignUp på GitHub her</a></br>
+	    	Online platform til versions styring af kode. Et gratis og populært valg.</br>
+		Virker ved, at du har et såkaldt git-repository til et kode-projekt på din computer og en kopi på github.</br></br>
+		
+			<a href="https://github.com/">SignUp på GitHub her</a></br>
 
 		<h5 class="w3-text-teal">GitHub Desktop</h5>	
 	    	Program til kommunikation med GitHub.</br></br>
-		<a href="https://desktop.github.com/">Download Github Desktop her</a></br>
+		
+			<a href="https://desktop.github.com/">Download Github Desktop her</a></br>
 
 		<h5 class="w3-text-teal">IntelliJ</h5>	
 		IntelliJ er en af de mest populære IDE'er i softwareindustrien.</br> 
@@ -164,10 +170,13 @@ th {
 		Dette er primært et værktøj for 3G.</br></br>
 		
 		Vigtigt: Kun kompatibel med Java version 8 build 202:
-		<a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a></br>
+		(se mere info her: <a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a>)</br>
+		Vigtigt: Du skal også installere Processing som et bibliotek.
 		
-		<a href="https://desktop.github.com/">Download IntelliJ her</a></br>
-	    	
+			
+			<a href="https://desktop.github.com/">Download IntelliJ her</a></br>
+	    		<a href="https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html">Download Java 8 build 202</a></br>
+			<a href="https:IntelliJ/core-3.3.6.jar">Hent Processing 3.3.6 som bibliotek her</a></br>
 	    	</p>
     </div>
   </div>
