--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ th {
   background-color: #dddddd;
 }
 a {
-  background-color: ##f3f4fb;
+  background-color: #f3f4fb;
 }
 </style>
 <body>
@@ -143,41 +143,49 @@ a {
 	<div class="w3-row w3-padding-64" id="vaerktoj">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Værktøjer & Sprog</h1>
-	    	<p>
-		Nedenfor ses en liste over links til værktøjer vi bruger i faget:
+	<p>
+	
+	Nedenfor ses en liste over links til værktøjer vi bruger i faget:
 		
 			
-		<h5 class="w3-text-teal">Processing</h5>	
+	<h5 class="w3-text-teal">Processing</h5>	
 	    	Udviklingsmiljø til sproget Processing,- en forenkling af Java.</br></br>
-		
-			<a href="https://processing.org/download/">Download Processing her</a></br>
+			
+			<ul>
+			<li><a href="https://processing.org/download/">Download Processing her</a></li>
+			</ul>
 	    
 
-		<h5 class="w3-text-teal">GitHub</h5>	
+	<h5 class="w3-text-teal">GitHub</h5>	
 	    	Online platform til versions styring af kode. Et gratis og populært valg.</br>
-		Virker ved, at du har et såkaldt git-repository til et kode-projekt på din computer og en kopi på github.</br></br>
+		Virker ved, at du har et såkaldt git-repository til et kode-projekt på din computer og en kopi på github.
 		
-			<a href="https://github.com/">SignUp på GitHub her</a></br>
+			<ul>
+			<li><a href="https://github.com/">SignUp på GitHub her</a></li>
+			</ul>
 
-		<h5 class="w3-text-teal">GitHub Desktop</h5>	
-	    	Program til kommunikation med GitHub.</br></br>
-		
-			<a href="https://desktop.github.com/">Download Github Desktop her</a></br>
+	<h5 class="w3-text-teal">GitHub Desktop</h5>	
+	    	Program til kommunikation med GitHub.
+			
+			<ul>
+			</li><a href="https://desktop.github.com/">Download Github Desktop her</a></li>
+			</ul>
 
-		<h5 class="w3-text-teal">IntelliJ</h5>	
+	<h5 class="w3-text-teal">IntelliJ</h5>	
 		IntelliJ er en af de mest populære IDE'er i softwareindustrien.</br> 
 		Man kan downloade "intelliJ Community" gratis. Så er det muligt at skrive ren Java med Processing som et bibliotek.</br>
-		Dette er primært et værktøj for 3G.</br></br>
+		Dette er primært et værktøj for 3G.</br>
 		
 		Vigtigt: Kun kompatibel med Java version 8 build 202:
 		(se mere info her: <a href="https://github.com/processing/processing/wiki/Build-Instructions">processing/wiki/Build-Instructions</a>)</br>
 		Vigtigt: Du skal også installere Processing som et bibliotek.
 		
-			
-			<a href="https://desktop.github.com/">Download IntelliJ her</a></br>
-	    		<a href="https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html">Download Java 8 build 202</a></br>
-			<a href="https:IntelliJ/core-3.3.6.jar">Hent Processing 3.3.6 som bibliotek her</a></br>
-	    	</p>
+			<ul>
+			<li><a href="https://desktop.github.com/">Download IntelliJ her</a></li>
+	    		<li><a href="https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html">Download Java 8 build 202</a></li>
+			<li><a href="https:IntelliJ/core-3.3.6.jar">Hent Processing 3.3.6 som bibliotek her</a></li>
+			<ul>
+	</p>
     </div>
   </div>
 
