--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ a {
 			<ul>
 			<li><a href="https://desktop.github.com/">Download IntelliJ her</a></li>
 	    		<li><a href="https://www.oracle.com/java/technologies/javase/javase8-archive-downloads.html">Download Java 8 build 202</a></li>
-			<li><a href="https:IntelliJ/core-3.3.6.jar">Hent Processing 3.3.6 som bibliotek her</a></li>
+			<li><a href="IntelliJ/core-3.3.6.jar">Hent Processing 3.3.6 som bibliotek her</a></li>
 			<ul>
 	</p>
     </div>
