--- a/index.html
+++ b/index.html
@@ -272,6 +272,28 @@ a {
 			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,16,8,2020)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
+					
+					<table>
+						<tr>
+							<th>Dato:</th>
+							<td>Onsdag d.12/8</td>
+						</tr>
+						<tr>
+							<th>Materiale:</th>
+							<td>	
+								<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a> , 
+								<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
+							</td>
+						</tr>
+						<tr>
+							<th>Formål:</th>
+							<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
+						</tr>
+						<tr>
+							<th>Evaluering/Aflevering:</th>
+							<td></td>
+						</tr>
+					</table>
 					<table >
 					<tr>
 					<th>Dato</th>
