--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ a {
 						<tr>
 							<th>Materiale:</th>
 							<td>	
-								<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a> , 
+								<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a></br> 
 								<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
 							</td>
 						</tr>
@@ -290,7 +290,7 @@ a {
 							<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
 						</tr>
 						<tr>
-							<th>Evaluering/Aflevering:</th>
+							<th>Evaluering:</th>
 							<td></td>
 						</tr>
 					</table>
