--- a/index.html
+++ b/index.html
@@ -294,35 +294,26 @@ a {
 							<td></td>
 						</tr>
 					</table>
-					<table >
-					<tr>
-					<th>Dato</th>
-					<th style="width: 300px">Materiale</th>
-					<th style="width: 300px">Formål</th>
-					<th style="width: 300px">Evaluering</th>
-					</tr>
 
-					<tr>
-					<td>Onsdag d.12/8</td>
-					<td>	
-						<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a> , 
-						<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
-					</td>
-					<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
-					<td></td>
-					</tr>
-
-					<tr>
-					<td>Torsdag d.13/8</td>
-					<td>	
-					</td>
-					<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
-					<td>Mindst to tilfældige præsenterer ved tavlen!</td>
-					</tr>
-	
-						
+					<table>
+						<tr>
+							<th>Dato:</th>
+							<td>Torsdag d.13/8</td>
+						</tr>
+						<tr>
+							<th>Materiale:</th>
+							<td>	
+							</td>
+						</tr>
+						<tr>
+							<th>Formål:</th>
+							<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
+						</tr>
+						<tr>
+							<th>Evaluering:</th>
+							<td>Mindst en præsenterer sin årsprøve ved tavlen</td>
+						</tr>
 					</table>
-			
 			
 <!-- MANGE TING DER KAN FLYVE - FORLØBET ................................................-->			
 
