--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ a {
 					<table>
 						<tr>
 							<th>Dato:</th>
-							<td>Onsdag d.12/8</td>
+							<th>Onsdag d.12/8</th>
 						</tr>
 						<tr>
 							<th>Materiale:</th>
@@ -298,7 +298,7 @@ a {
 					<table>
 						<tr>
 							<th>Dato:</th>
-							<td>Torsdag d.13/8</td>
+							<th>Torsdag d.13/8</th>
 						</tr>
 						<tr>
 							<th>Materiale:</th>
@@ -328,7 +328,7 @@ a {
 					<table>
 						<tr>
 							<th>Dato:</th>
-							<td>	Mandag d.17/8</td>
+							<th>	Mandag d.17/8</th>
 						</tr>
 						<tr>
 							<th>Materiale:</th>
