--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a {
 <!-- .............................................................UNDERVISNINGSMATERIALE..........................................................-->	
 	<div class="w3-row w3-padding-64" id="undervisningsmateriale">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Undervisningsmateriale</h1>
+	    <h1 class="w3-text-teal">Undervisnings-</br>Materialer</h1>
 	    	<p>
 			Vi bruger ikke nogen lærebog kun online-materiale (måske ændrer det sig).</b>
 			Nedenfor ses en oversigt over vores undervisningsmateriale:
