--- a/index.html
+++ b/index.html
@@ -389,7 +389,10 @@ a {
 					</table>
 
 
-				<h5 class="w3-text-teal">Nye Posters (denne gang kommer de op)</h5>
+				<h5 class="w3-text-teal">Repetition af data visualisering</h5>
+				Det er langt tid siden vi har lavet datavisualisering. Derfor laver vi en lille startøvelse inden vi for alvor går igang.</br>
+				I skal blive gode til det her. </br>
+
 					<table >
 					<tr>
 					<th>Dato</th>
