--- a/index.html
+++ b/index.html
@@ -386,6 +386,43 @@ a {
 								1.) Forklaring til løsning af hver opgave</br>
 								2.) Forklaring til test af hver opgave</td>
 						</tr>
+
+<!-- ...............................DATAVISUALISERING NATURKATASTROFER - FORLØBET ..................................-->
+
+						<tr><th colspan = "2">
+
+						<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",26,8,9,9,2020)</script></h5>
+							Dette bliver en repetition af 'data visulaisering' og hente data fra fil.</br>
+							Der bliver et tværfagligt projekt med KomIT kort tid efter.</br>
+							I får udleveret noget kode der i skal færdigskrive.</br>
+							Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</br></br>
+
+						</th></tr>
+
+						<tr>
+							<th></th>
+							<th >	</br>	Dato: Mandag d.26/8 </th>
+						</tr>
+						<tr>
+							<th>Materiale:</th>
+							<td>
+							
+							</td>
+						</tr>
+						<tr>
+							<th>Formål:</th>
+							<td>	Forstå  metode og styrke i kombination af: objekter, arrays og loops</td>
+						</tr>
+						<tr>
+							<th>Evaluering:</th>
+							<td>Aflevere Dokument + Hele Koden: D.25/8 </br>
+									Dokumentet skal indeholde: </br>
+								1.) Forklaring til løsning af hver opgave</br>
+								2.) Forklaring til test af hver opgave</td>
+						</tr>
+
+
+
 					</table>
 
 
