--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a {
 		Vi arbejder med følgende tre gode vaner, der automatisk gør koden mere "clean":
 
 		<ul>
-			<li>God navngivning</li>
+			<li>FNAT: Fantastisk navngivning af ting</li>
 			<li>DRY: Dont repeat yourself</li>
 			<li>KISS: Keep it simple stupid</li>
 	    	</ul>
@@ -329,7 +329,7 @@ a {
 
 			<h5 class="w3-text-teal"><script>forlob("Mange Ting der Flyver - ",16,8,25,8,2020)</script></h5>
 				Opgaven er at få nogle "ting" til at bevæge sig rundt på skærmen. Når musen rør dem skal de ændre farve.</br>
-				I får udleveret noget kode der i skal færdigskrive.</br>
+				I får udleveret noget kode  i skal færdigskrive.</br>
 				Lidt mere repetition i : Objekter, for-loops og lister</br></br>
 
 			</th></tr>
@@ -392,9 +392,9 @@ a {
 						<tr><th colspan = "2">
 
 						<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",26,8,9,9,2020)</script></h5>
-							Dette bliver en repetition af 'data visulaisering' og hente data fra fil.</br>
-							Der bliver et tværfagligt projekt med KomIT kort tid efter.</br>
-							I får udleveret noget kode der i skal færdigskrive.</br>
+							Dette bliver en repetition af 'data visulaisering' og hente data fra fil.
+							Der bliver et tværfagligt projekt med KomIT kort tid efter.
+							I får udleveret noget kode i skal færdigskrive.</br>
 							Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</br></br>
 
 						</th></tr>
@@ -406,17 +406,19 @@ a {
 						<tr>
 							<th>Materiale:</th>
 							<td>
-							
+										VIGTIGT: </br>
+										KODE MANGLER !!!!! </br>
+										HER KOMMER DER NOGET KODE I SKAL SKRIVE VIDERE PÅ!!!!</br>
 							</td>
 						</tr>
 						<tr>
 							<th>Formål:</th>
-							<td>	Forstå  metode og styrke i kombination af: objekter, arrays og loops</td>
+							<td>	Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</td>
 						</tr>
 						<tr>
 							<th>Evaluering:</th>
-							<td>Aflevere Dokument + Hele Koden: D.25/8 </br>
-									Dokumentet skal indeholde: </br>
+							<td>Aflevere Video præsentation af produktet + Hele Koden: D.9/9 </br>
+									Kode skal indeholde kommentarer: </br>
 								1.) Forklaring til løsning af hver opgave</br>
 								2.) Forklaring til test af hver opgave</td>
 						</tr>
@@ -426,9 +428,6 @@ a {
 					</table>
 
 
-				<h5 class="w3-text-teal">Repetition af data visualisering</h5>
-				Det er langt tid siden vi har lavet datavisualisering. Derfor laver vi en lille startøvelse inden vi for alvor går igang.</br>
-				I skal blive gode til det her. </br>
 
 					<table >
 					<tr>
@@ -445,7 +444,7 @@ a {
 					</tr>
 					</table>
 
-				<h5 class="w3-text-teal">Data visualisering af csv-fil & GUI bibliotek</h5>
+				<h5 class="w3-text-teal">Tværfagligt : Data visualisering af csv-fil </h5>
 					<table >
 					<tr>
 					<th>Dato</th>
