--- a/index.html
+++ b/index.html
@@ -399,9 +399,30 @@ a {
 
 						</th></tr>
 
+
 						<tr>
 							<th></th>
 							<th >	</br>	Dato: Mandag d.26/8 </th>
+						</tr>
+						<tr>
+							<th>Materiale:</th>
+							<td>
+								<a href="https://data.humdata.org/dataset/people-killed-in-natural-disasters/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba">pom.xml</a>
+							</td>
+						</tr>
+						<tr>
+							<th>Formål:</th>
+							<td>Download data-fil og hent data ind i processingprogrammet.</td>
+						</tr>
+						<tr>
+							<th>Evaluering:</th>
+							<td>Gennemgang af vigtigste metoder på tavlen. loadString og split</td>
+						</tr>
+
+
+						<tr>
+							<th></th>
+							<th >	</br>	Dato: Tirsdag d.27/8 </th>
 						</tr>
 						<tr>
 							<th>Materiale:</th>
