--- a/index.html
+++ b/index.html
@@ -407,7 +407,8 @@ a {
 						<tr>
 							<th>Materiale:</th>
 							<td>
-								<a href="https://data.humdata.org/dataset/people-killed-in-natural-disasters/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba">pom.xml</a>
+								<a href="https://data.humdata.org/dataset/people-killed-in-natural-disasters/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba">
+									deaths-natural-disasters.csv</a>
 							</td>
 						</tr>
 						<tr>
