--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ a {
 						<tr>
 							<th>Materiale:</th>
 							<td>
-								<a href="https://data.humdata.org/dataset/people-killed-in-natural-disasters/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba">
+						<a href="https://data.humdata.org/dataset/73fcf87e-c8d7-4310-a3ed-8d201ae12246/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba/download/deaths-natural-disasters.csv">
 									deaths-natural-disasters.csv</a>
 							</td>
 						</tr>
